Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7352

conf-sanity test_78: no space left on device

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.9.0
    • Lustre 2.9.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Andreas Dilger <andreas.dilger@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/fe434a72-7d5b-11e5-bca9-5254006e85c2.

      The sub-test test_78 failed with the following error:

      1048576 bytes (1.0 MB) copied, 0.140863 s, 7.4 MB/s
      dd: opening `/mnt/lustre/d78.conf-sanity/f78.conf-sanity-99': No space left on device
       conf-sanity test_78: @@@@@@ FAIL: (4) create /mnt/lustre/d78.conf-sanity/f78.conf-sanity-99 failed 
      

      Please provide additional information about the failure here.

      Info required for matching: conf-sanity 78
      Info required for matching: conf-sanity 79

            wc-triage WC Triage
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: