LU-7352 ofd: conservative grant in low free space

Use conservative grant mode, so that we can use more
space before it reach ENOSPC.

Test-Parameters: trivial testlist=conf-sanity,conf-sanity,conf-sanity
Test-Parameters: testlist=conf-sanity,conf-sanity,conf-sanity,conf-sanity
Signed-off-by: Wang Shilong <wshilong@ddn.com>
Change-Id: I2934e9cfad4a3d03d904d16f4b288628bd8d4a47